--- a/WEB3_polygon-main/client/src/pages/mail/Mail.css
+++ b/WEB3_polygon-main/client/src/pages/mail/Mail.css
@@ -1,4 +1,4 @@
-@import url('http://fonts.cdnfonts.com/css/valorant');
+@import url('https://fonts.cdnfonts.com/css/valorant');
 .mail{
     overflow: hidden;
     margin:0px 0px 0px 0px;
